--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "csv-parse": "^5.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "swagger-ui-express": "^4.6.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/swagger-ui-express": "^4.1.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   }
